# A1_Maze_CPP

src/: CMakeLists.txt  Doxyfile  Makefile  maze.cc
src/data/: 3x4.txt
src/include/: maze.h
src/modules/: maze.cc
src/tests/: CMakeLists.txt  main_test.cc
src/tests/include/: main_test.h  maze_test.h
src/tests/modules/: maze_test.cc
